--- a/runbot/views/res_config_settings_views.xml
+++ b/runbot/views/res_config_settings_views.xml
@@ -11,7 +11,7 @@
                   <h2>Runbot configuration</h2>
                   <div class="row mt16 o_settings_container">
                     <div class="col-xs-12 col-md-6 o_setting_box">
-                      <div class="o_setting_right_pane">
+                      <div>
                         <div class="content-group">
                             <div class="mt-16 row">
                               <label for="runbot_workers" class="col-xs-3 o_light_label" style="width: 60%;"/>
@@ -23,7 +23,7 @@
                             </div>
                         </div>
                       </div>
-                       <div class="o_setting_right_pane">
+                       <div>
                          <div class="content-group">
                             <div class="content-group">
                                 <div class="mt-16 row">
